--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "email": "artemkin030@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^8.3",
+        "guzzlehttp/guzzle": "^7.5"
+    }
 }
